// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectWithTags Display tests should match snapshot 1`] = `
<div>
  <div
    aria-haspopup="listbox"
    aria-owns="downshift-1-menu"
    class="component"
    role="combobox"
    tabindex="-1"
  >
    <div
      class="component xl"
    >
      <div
        class="component component xl block hasRightAddons"
      >
        <div
          class="field inner inner"
        >
          <div
            class="inputWrapper"
          >
            <div
              class="input"
            >
              <div
                class="contentWrapper contentWrapperVertical"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="downshift-1-menu"
                  aria-labelledby="downshift-1-label"
                  autocomplete="off"
                  class="input"
                  id="downshift-0-input"
                  tabindex="0"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="addons rightAddons addons addons-size-xl"
          >
            <svg
              class="arrow"
              fill="currentColor"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M12 14L6.5 8.5 5 10l7 7 7-7-1.5-1.5L12 14z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectWithTags Display tests should match snapshot with selected tags 1`] = `
<div>
  <div
    aria-haspopup="listbox"
    aria-owns="downshift-3-menu"
    class="component"
    role="combobox"
    tabindex="-1"
  >
    <div
      class="component xl"
    >
      <div
        class="component component xl block hasRightAddons"
      >
        <div
          class="field inner inner filled"
        >
          <div
            class="inputWrapper"
          >
            <div
              class="input"
            >
              <div
                class="contentWrapper hasTags contentWrapperVertical"
              >
                <button
                  class="component component xxs default checked tag"
                  type="button"
                >
                  <span>
                    <span
                      class="tagContentWrap"
                    >
                      H
                      <span
                        class="tagCross"
                      >
                        <svg
                          fill="currentColor"
                          focusable="false"
                          height="24"
                          role="img"
                          viewBox="0 0 24 24"
                          width="24"
                        >
                          <path
                            d="M10.586 12L8 14.5 9.5 16l2.5-2.586L14.5 16l1.5-1.5-2.586-2.5L16 9.5 14.5 8 12 10.586 9.5 8 8 9.5l2.586 2.5z"
                          />
                        </svg>
                      </span>
                    </span>
                  </span>
                </button>
                <button
                  class="component component xxs default checked tag"
                  type="button"
                >
                  <span>
                    <span
                      class="tagContentWrap"
                    >
                      Li
                      <span
                        class="tagCross"
                      >
                        <svg
                          fill="currentColor"
                          focusable="false"
                          height="24"
                          role="img"
                          viewBox="0 0 24 24"
                          width="24"
                        >
                          <path
                            d="M10.586 12L8 14.5 9.5 16l2.5-2.586L14.5 16l1.5-1.5-2.586-2.5L16 9.5 14.5 8 12 10.586 9.5 8 8 9.5l2.586 2.5z"
                          />
                        </svg>
                      </span>
                    </span>
                  </span>
                </button>
                <button
                  class="component component xxs default checked tag"
                  type="button"
                >
                  <span>
                    <span
                      class="tagContentWrap"
                    >
                      Na
                      <span
                        class="tagCross"
                      >
                        <svg
                          fill="currentColor"
                          focusable="false"
                          height="24"
                          role="img"
                          viewBox="0 0 24 24"
                          width="24"
                        >
                          <path
                            d="M10.586 12L8 14.5 9.5 16l2.5-2.586L14.5 16l1.5-1.5-2.586-2.5L16 9.5 14.5 8 12 10.586 9.5 8 8 9.5l2.586 2.5z"
                          />
                        </svg>
                      </span>
                    </span>
                  </span>
                </button>
                <input
                  aria-autocomplete="list"
                  aria-controls="downshift-3-menu"
                  aria-labelledby="downshift-3-label"
                  autocomplete="off"
                  class="input"
                  id="downshift-2-input"
                  placeholder=""
                  tabindex="0"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="addons rightAddons addons addons-size-xl"
          >
            <svg
              class="arrow"
              fill="currentColor"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M12 14L6.5 8.5 5 10l7 7 7-7-1.5-1.5L12 14z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
